# hydro-data-statistical

./: .env.windows.example  .gitignore  README.md  pyproject.toml  start_windows.bat
.data/: OneDayData.sql  Stations.sql
app/: __init__.py  config_store.py  db.py  main.py  report_logic.py  settings.py
config/: report_rules.json
docs/plans/: 2026-02-04-hydro-monthly-report-implementation.md  2026-02-06-config-autogen-design.md
static/: app.css  app.js
templates/: index.html
tests/: test_api_regenerate.py  test_config_and_db_helpers.py  test_config_autogen.py  test_report_logic.py
